fix: loading text styling. padding, and align

--- a/public/styles/channel.css
+++ b/public/styles/channel.css
@@ -31,6 +31,8 @@ path {
   height: 100%;
   left: 0;
   top: 0;
+  padding: 1em;
+  text-align: right;
 }
 
 body[data-scene=list]>.container#list {
